# TensileSME

./: .gitignore  CMakeLists.txt  README.md
include/: tensorSMEPipeline.h
src/: generate_ir.py  tensor-sme-opt.cpp  tensorSMEPipeline.cpp
